argo-apps/rhoai-maas/tls-authorino-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: ServerSideApply=true
  name: authorino
  namespace: kuadrant-system
spec:
  template:
    spec:
      containers:
        - name: authorino
