argo-apps/rhoai-maas/tls-authorino-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: ServerSideApply=true
    service.beta.openshift.io/serving-cert-secret-name: authorino-server-cert
  name: authorino-authorino-authorization
  namespace: kuadrant-system
spec: {}
