argo-apps/rhoai-maas/maas-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    service.beta.openshift.io/serving-cert-secret-name: maas-gateway-tls
  name: maas-gateway-cert-generator
  namespace: openshift-ingress
spec:
  clusterIP: None
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    opendatahub.io/managed: "false"
    security.opendatahub.io/authorino-tls-bootstrap: "true"
  name: maas-default-gateway
  namespace: openshift-ingress
spec:
  gatewayClassName: data-science-gateway-class
  infrastructure:
    parametersRef:
      name: data-science-gateway-config
      group: ""
      kind: ConfigMap
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-manager-ingress-cert
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: maas-default-gateway
  namespace: openshift-ingress
spec:
  host: MAAS_HOST
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: maas-default-gateway-data-science-gateway-class
    weight: 100
