argo-apps/rhoai-maas/remove-kuadrant-wasm-from-dsg.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: remove-kuadrant-wasm-from-dsg
  namespace: openshift-ingress
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: data-science-gateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.wasm
      patch:
        operation: REMOVE
